# c_algorithms_and_structs

./: CMakeLists.txt  main.cpp
Task10/: linkedlist.cpp  linkedlist.h  stack_task10.cpp  stack_task10.h  task10.cpp  task10.h
Task12/: binaryTree.cpp  binaryTree.h  task12.cpp  task12.h
Task13/: task13.cpp  task13.h
Task15/: task15.cpp  task15.h
Task16/: task16.cpp  task16.h
Task2/: task2.cpp  task2.h
Task3/: task3.cpp  task3.h
Task4/: task4.cpp  task4.h
Task5/: arrayUtils.cpp  arrayUtils.h  task5.cpp  task5.h
Task6/: arrayUtils.h  task6.cpp  task6.h
Task7/: task7.cpp  task7.h
Task9/: queue.cpp  queue.h  stack.cpp  stack.h  task9.cpp  task9.h
Utils/: arrayUtils.cpp  arrayUtils.h
